# ML

./: 14_3288_DeepLearning_Main.cpp  14_3288_DeepLearning_Proj.vcxproj  14_3288_DeepLearning_Proj.vcxproj.filters  README.md
Core/: SanContainer.cpp  SanContainer.h  SanMemory.cpp  SanString.cpp  SanString.h  SanTypes.h  cVectorManager.cpp  cVectorManager.h  cVectorManagerDef.h
Device/: SanDevices.h
FileIO/: SanFileIO.cpp
Graphics/: PixelBasedRenderFunc.cpp  PixelBasedRenderFunc.h
ML/: cArtificialNeuralNetworkAlgorithm.h  cDeepNeuralNetworkAlgorithm.cpp  cDeepNeuralNetworkAlgorithm.h
SanMachineLearningProj/: SanMachineLearningProj.sln
SanMachineLearningProj/SanMachineLearningProj/: RenderSystem.h  SanMachineLearningProj.vcxproj.filters  SanMachineLearning_Main.cpp
SanMachineLearningProj/SanMachineLearningProj/Core/: SanMathematics.cpp  SanMemory.h
SanMachineLearningProj/SanMachineLearningProj/DataSet/: ids_adj-train.txt  iris-attr.txt  tt.txt
SanMachineLearningProj/SanMachineLearningProj/Graphics/: SanGraphics.cpp
SanMachineLearningProj/SanMachineLearningProj/ML/: cGeneticAlgorithmHepothesis.h  cRestrictedBoltzmannMachineAlgorithmCUDA.cpp
SanMachineLearningSolution/: SanMachineLearningSolution.sln
SanMachineLearningSolution/ClassificationProblemSet/: ClassificationProblemSet.vcxproj  ClassificationProblemSet.vcxproj.filters  SanMachineLearning_Main.cpp
SanMachineLearningSolution/ClassificationProblemSet/ProblemSet/: ArtificialNeuralNetworkLearningProblem.h  DNNTrainingDataPreProcessing.h  DecisionTreeLearningProblem.h  GeneticAlgorithmLearningProblem.h  ProblemUIFunc.cpp  ProblemUIFunc.h
SanMachineLearningSolution/DataSet/Classification/: ids_adj-attr.txt  ids_adj-test.txt  restaurant-attr.txt  ttt-train.txt
SanMachineLearningSolution/GameProblemSet/: GameProblemSet.vcxproj  GameProblemSet.vcxproj.filters  SanMachineLearning_Main.cpp
SanMachineLearningSolution/GameProblemSet/ProblemSet/: ProblemUIFunc.h  TicTacToeDecetorFunc.h  TicTacToeLinearLearningProblem.h  cTicTacToeGame.h
SanMachineLearningSolution/MLTK/: MLTK.vcxproj  MLTK.vcxproj.filters
SanMachineLearningSolution/MLTK/Core/: SanString.cpp
SanMachineLearningSolution/MLTK/Device/: cSanTerminalDeviceWin.cpp
SanMachineLearningSolution/MLTK/FileIO/: SanFileIO.h
SanMachineLearningSolution/MLTK/ML/: cArtificialNeuralNetworkAlgorithm.h  cDecisionTreeAlgorithm.cpp  cRestrictedRoltzmannMachineAlgorithm.cpp
SanMachineLearningSolution/MLTK/ProblemSet/: cTicTacToeGame.h
SanMachineLearningSolution/RecommendationProblemSet/: RecommendationProblemSet.vcxproj
SanMachineLearningSolution/SanMachineLearningProj/: SanMachineLearningProj.vcxproj
SanMachineLearningSolution/SanMachineLearningProj/Core/: MsgDef.h
SanMachineLearningSolution/SanMachineLearningProj/FileIO/: cBMPReader.h
SanMachineLearningSolution/SanMachineLearningProj/Graphics/: SanGraphics.h
SanMachineLearningSolution/SanMachineLearningProj/ML/: cDeepNeuralNetworkAlgorithm.cpp  cDeepNeuralNetworkAlgorithm.h  cGARuleSet.cpp  cKMeansAlgorithm.h
SanMachineLearningSolution/Toolkit/: Toolkit.vcxproj  Toolkit.vcxproj.filters
SanMachineLearningSolution/Toolkit/Core/: SanContainer.cpp  SanContainer.h  SanMathematics.cpp  SanMathematics.h  SanMemory.cpp  SanMemory.h  SanString.cpp
SanMachineLearningSolution/Toolkit/Core/Container/: CMakeLists.txt  SanContainerDef.h  SanIterator.h  SanPair.h  SanStream.cpp  SanStream.h  SanStreamIterator.h  SanStreamT.h  SanTree.h
SanMachineLearningSolution/Toolkit/Core/Mathematics/: CMakeLists.txt  Matrix.cpp  Matrix.h  SanMathematicsDef.h  SanMathematicsMatrix.cpp  SanMathematicsMatrix.h  SanMathematicsVector.cpp  SanMathematicsVector.h  SanMathematicsVectorT.h  Tensor.cpp  Tensor.h  Vector.cpp  Vector.h
SanMachineLearningSolution/Toolkit/Core/Memory/: CMakeLists.txt  cSanMemoryManagerDef.h
SanMachineLearningSolution/Toolkit/Graphics/: SanGraphics.cpp  SanGraphics.h
SanMachineLearningSolution/Toolkit/ML/: cDataSet.cpp  cDataSet.h  cGAContinueRuleSet.cpp  cGARuleSet.cpp  cSanDataContainer.h
SanMachineLearningSolution/Toolkit/ML/NeuralNetwork/: CMakeLists.txt  cArtificialNeuralNetworkAlgorithm.cpp  cArtificialNeuralNetworkAlgorithm.h  cArtificialNeuralNetworkAlgorithm_v2.cpp  cArtificialNeuralNetworkAlgorithm_v2.h  cDeepNeuralNetworkAlgorithm.cpp  cDeepNeuralNetworkAlgorithm.h  cForwardNeuralNetworkAlgorithm.cpp  cForwardNeuralNetworkAlgorithm.h  cRestrictedBoltzmannMachineAlgorithm.cpp  cRestrictedBoltzmannMachineAlgorithm.h
SanMachineLearningSolution/Toolkit/ML/NeuralNetwork/Node/: CMakeLists.txt  cConvNode.cpp  cConvNode.h  cLogisticNode.cpp  cLogisticNode.h  cNeuralNode.cpp  cNeuralNode.h  cSigmoidNode.cpp  cSigmoidNode.h
SanOpenSourceMachineLearningProj/: SanOpenSourceMachineLearningProj.sln
SanOpenSourceMachineLearningProj/SanMachineLearningProj/Core/: SanMathematics.h  SanString.h
SanOpenSourceMachineLearningProj/SanMachineLearningProj/DataSet/: ids-attr.txt  ids_con-attr.txt
SanOpenSourceMachineLearningProj/SanMachineLearningProj/FileIO/: FileLoader.h  cBMPReader.cpp
SanOpenSourceMachineLearningProj/SanMachineLearningProj/ML/: cRestrictedBoltzmannMachineAlgorithm.h
SanOpenSourceMachineLearningProj/SanMachineLearningProj/ProblemSet/: ArtificialNeuralNetworkLearningProblem.h  GeneticAlgorithmLearningProblem.h  TicTacToeLinearLearningProblem.h
SanOpenSourceMachineLearningProj/SanOpenSourceMachineLearningProj/: 14_3288_DeepLearning_Main.cpp  SanOpenSourceMachineLearningProj.vcxproj  SanOpenSourceMachineLearningProj.vcxproj.filters  TrainingDataPreProcessing.h
SanOpenSourceMachineLearningProj/SanOpenSourceMachineLearningProj/Core/: SanContainer.h  WinDataDef.h
SanOpenSourceMachineLearningProj/SanOpenSourceMachineLearningProj/DataSet/: TicTacToeTrainingDataSet.txt  ids-test.txt  ids-train.txt  ids_con-test.txt  ids_con-train.txt  restaurant-train.txt  ta.txt  tennis-test.txt  ttt-attr.txt  ttt-test.txt
SanOpenSourceMachineLearningProj/SanOpenSourceMachineLearningProj/Device/: cSanTerminalDeviceWin.cpp  cSanTerminalDeviceWin.h
(+27 files in other folders)
